# StoreApiPractice

./: .editorconfig  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/alembic/: env.py
app/alembic/versions/: a18c9595dd05_init.py  ebd9e880ddb1_added_price_to_item.py
app/core/: bootstrap.py  cli.py  container.py
app/db/: README.md
app/modules/store/application/services/: store_service.py
app/modules/store/domain/models/: item.py
app/modules/store/domain/repositories/: i_store_repository.py
app/modules/store/domain/services/: i_store_service.py
app/modules/store/infrastructure/mappers/: item_mapper.py
app/modules/store/infrastructure/orm/: item_orm.py
app/modules/store/infrastructure/repositories/: store_repository.py
app/modules/store/presentation/controllers/: store_controller.py
app/modules/store/presentation/dto/: __init__.py  create_item_dto.py  update_item_dto.py
app/modules/store/presentation/response/: __init__.py  create_item_response.py  delete_item_response.py  get_item_response.py  update_item_response.py
app/shared/domain/services/database/: i_sqlite_database_service.py
app/shared/infrastructure/services/database/: sqlite_database_service.py
